@@ -20,7 +20,7 @@ public class SquareBoardFactory
      * @return simple {@code SquareBoard} for 2 {@code Players}
      */
     static public SquareBoard CreateSBFor2Players(Parameters parameters)    {
-        SquareBoard board = new SquareBoard(Math.max(parameters.mapSize, 27), parameters.baseSize); // do przemyslenia
+        SquareBoard board = new SquareBoard(Math.max(parameters.mapSize(), 27), parameters.baseSize()); // do przemyslenia
 
         board.playerNexuses.put(PlayerColor.RED,new ArrayList<>());
         board.playerNexuses.put(PlayerColor.BLUE,new ArrayList<>());
@@ -54,17 +54,17 @@ public class SquareBoardFactory
         }
         //==============================================NEXUS OFFSET
         Point fpNexusOffset = new Point(
-                rng.nextInt(sectionSize- parameters.baseSize-1) + (fpNexusSec%3) * sectionSize,
-                rng.nextInt(sectionSize-parameters.baseSize-1) + (fpNexusSec/3) * sectionSize
+                rng.nextInt(sectionSize- parameters.baseSize()-1) + (fpNexusSec%3) * sectionSize,
+                rng.nextInt(sectionSize-parameters.baseSize()-1) + (fpNexusSec/3) * sectionSize
         );
         Point spNexusOffset = new Point(
-                rng.nextInt(sectionSize-parameters.baseSize-1) + (spNexusSec%3) * sectionSize,
-                rng.nextInt(sectionSize-parameters.baseSize-1) + (spNexusSec/3) * sectionSize
+                rng.nextInt(sectionSize-parameters.baseSize()-1) + (spNexusSec%3) * sectionSize,
+                rng.nextInt(sectionSize-parameters.baseSize()-1) + (spNexusSec/3) * sectionSize
         );
 
-        for(int x=1;x<=parameters.baseSize;x++)
+        for(int x=1;x<=parameters.baseSize();x++)
         {
-            for(int y=1;y<=parameters.baseSize;y++)
+            for(int y=1;y<=parameters.baseSize();y++)
             {
                 genGrid[x+fpNexusOffset.x][y+fpNexusOffset.y] = 1;
                 genGrid[x+spNexusOffset.x][y+spNexusOffset.y] = 2;
@@ -75,33 +75,33 @@ public class SquareBoardFactory
         Point fpSplit,spSplit;
         if(fpNexusSec/3 == spNexusSec/3) // w jednym wierszu
         {
-            fpSplit = new Point(fpNexusOffset.x+parameters.baseSize+1,fpNexusOffset.y+2+rng.nextInt(parameters.baseSize-2));
-            spSplit = new Point(spNexusOffset.x,spNexusOffset.y+2+rng.nextInt(parameters.baseSize-2));
+            fpSplit = new Point(fpNexusOffset.x+parameters.baseSize()+1,fpNexusOffset.y+2+rng.nextInt(parameters.baseSize()-2));
+            spSplit = new Point(spNexusOffset.x,spNexusOffset.y+2+rng.nextInt(parameters.baseSize()-2));
         }
         else if(fpNexusSec%3 == spNexusSec%3) // w jednej kolumnie
         {
-            fpSplit = new Point(fpNexusOffset.x+2+rng.nextInt(parameters.baseSize-2),fpNexusOffset.y+parameters.baseSize+1);
-            spSplit = new Point(spNexusOffset.x+2+rng.nextInt(parameters.baseSize-2),spNexusOffset.y);
+            fpSplit = new Point(fpNexusOffset.x+2+rng.nextInt(parameters.baseSize()-2),fpNexusOffset.y+parameters.baseSize()+1);
+            spSplit = new Point(spNexusOffset.x+2+rng.nextInt(parameters.baseSize()-2),spNexusOffset.y);
         }
         else //reszta
         {
             ArrayList<Point> conFP = new ArrayList<>();
             ArrayList<Point> conSP = new ArrayList<>();
-            for(int i=1;i<parameters.baseSize-1;i++){
-                conFP.add(new Point(fpNexusOffset.x+1+i,fpNexusOffset.y+parameters.baseSize+1));
+            for(int i=1;i<parameters.baseSize()-1;i++){
+                conFP.add(new Point(fpNexusOffset.x+1+i,fpNexusOffset.y+parameters.baseSize()+1));
                 conSP.add(new Point(spNexusOffset.x+1+i,spNexusOffset.y));
             }
             if(fpNexusSec%3<spNexusSec%3)
             {
-                for(int i=1;i<parameters.baseSize-1;i++){
-                    conFP.add(new Point(fpNexusOffset.x+parameters.baseSize+1,fpNexusOffset.y+1+i));
+                for(int i=1;i<parameters.baseSize()-1;i++){
+                    conFP.add(new Point(fpNexusOffset.x+parameters.baseSize()+1,fpNexusOffset.y+1+i));
                     conSP.add(new Point(spNexusOffset.x,spNexusOffset.y+1+i));
                 }
             }
             else{
-                for(int i=1;i<parameters.baseSize-1;i++){
+                for(int i=1;i<parameters.baseSize()-1;i++){
                     conFP.add(new Point(fpNexusOffset.x,fpNexusOffset.y+1+i));
-                    conSP.add(new Point(spNexusOffset.x+parameters.baseSize+1,spNexusOffset.y+1+i));
+                    conSP.add(new Point(spNexusOffset.x+parameters.baseSize()+1,spNexusOffset.y+1+i));
                 }
 
             }
@@ -111,36 +111,36 @@ public class SquareBoardFactory
         BoardGenerationUtils.randomPath(fpSplit,spSplit,3,genGrid,board.size,board.size);
         //====================================SECOND & THIRD PATH
         ArrayList<Point> conFP = new ArrayList<>();
-        for(int i=2;i<parameters.baseSize;i++)
+        for(int i=2;i<parameters.baseSize();i++)
             conFP.add(new Point(fpNexusOffset.x+i,fpNexusOffset.y));
-        for(int i=2;i<parameters.baseSize;i++)
-            conFP.add(new Point(fpNexusOffset.x+parameters.baseSize+1,fpNexusOffset.y+i));
-        for(int i=parameters.baseSize-1;i>=2;i--)
-            conFP.add(new Point(fpNexusOffset.x+i,fpNexusOffset.y+parameters.baseSize+1));
-        for(int i=parameters.baseSize-1;i>=2;i--)
+        for(int i=2;i<parameters.baseSize();i++)
+            conFP.add(new Point(fpNexusOffset.x+parameters.baseSize()+1,fpNexusOffset.y+i));
+        for(int i=parameters.baseSize()-1;i>=2;i--)
+            conFP.add(new Point(fpNexusOffset.x+i,fpNexusOffset.y+parameters.baseSize()+1));
+        for(int i=parameters.baseSize()-1;i>=2;i--)
             conFP.add(new Point(fpNexusOffset.x,fpNexusOffset.y+i));
-        while(genGrid[conFP.get(0).x][conFP.get(0).y]==0)
-            conFP.add(conFP.remove(0));
-        while(genGrid[conFP.get(0).x][conFP.get(0).y]!=0)
-            conFP.remove(0);
+        while(genGrid[conFP.getFirst().x][conFP.getFirst().y]==0)
+            conFP.add(conFP.removeFirst());
+        while(genGrid[conFP.getFirst().x][conFP.getFirst().y]!=0)
+            conFP.removeFirst();
         Point sdConFP = conFP.get(rng.nextInt(conFP.size()/2));
         Point tdConFP = conFP.get(conFP.size() - 1 - rng.nextInt(conFP.size()/2));
 
 
 
         ArrayList<Point> conSP = new ArrayList<>();
-        for(int i=2;i<parameters.baseSize;i++)
+        for(int i=2;i<parameters.baseSize();i++)
             conSP.add(new Point(spNexusOffset.x+i,spNexusOffset.y));
-        for(int i=2;i<parameters.baseSize;i++)
-            conSP.add(new Point(spNexusOffset.x+parameters.baseSize+1,spNexusOffset.y+i));
-        for(int i=parameters.baseSize-1;i>=2;i--)
-            conSP.add(new Point(spNexusOffset.x+i,spNexusOffset.y+parameters.baseSize+1));
-        for(int i=parameters.baseSize-1;i>=2;i--)
+        for(int i=2;i<parameters.baseSize();i++)
+            conSP.add(new Point(spNexusOffset.x+parameters.baseSize()+1,spNexusOffset.y+i));
+        for(int i=parameters.baseSize()-1;i>=2;i--)
+            conSP.add(new Point(spNexusOffset.x+i,spNexusOffset.y+parameters.baseSize()+1));
+        for(int i=parameters.baseSize()-1;i>=2;i--)
             conSP.add(new Point(spNexusOffset.x,spNexusOffset.y+i));
-        while(genGrid[conSP.get(0).x][conSP.get(0).y]==0)
-            conSP.add(conSP.remove(0));
-        while(genGrid[conSP.get(0).x][conSP.get(0).y]!=0)
-            conSP.remove(0);
+        while(genGrid[conSP.getFirst().x][conSP.getFirst().y]==0)
+            conSP.add(conSP.removeFirst());
+        while(genGrid[conSP.getFirst().x][conSP.getFirst().y]!=0)
+            conSP.removeFirst();
         Point tdConSP = conSP.get(rng.nextInt(conSP.size()/2));
         Point sdConSP = conSP.get(conSP.size() - 1 - rng.nextInt(conSP.size()/2));
 
@@ -171,14 +171,14 @@ public class SquareBoardFactory
         }
         Point actFP = new Point(fpNexusOffset.x,fpNexusOffset.y),
                 actSP = new Point(spNexusOffset.x,spNexusOffset.y);
-        for(int x=1;x<=parameters.baseSize;x++)
+        for(int x=1;x<=parameters.baseSize();x++)
         {
             actFP.x++;
             actSP.x++;
 
             actFP.y = fpNexusOffset.y;
             actSP.y = spNexusOffset.y;
-            for(int y=1;y<=parameters.baseSize;y++)
+            for(int y=1;y<=parameters.baseSize();y++)
             {
 
                 actFP.y++;
@@ -186,20 +186,20 @@ public class SquareBoardFactory
                 if(x==4 && y==4)
                 {
                     if(rng.nextInt(10000)%2==0){
-                        board.grid[actFP.x][actFP.y] = new Nexus(PlayerColor.RED,actFP,parameters.nexusHitPoints);
+                        board.grid[actFP.x][actFP.y] = new Nexus(PlayerColor.RED,actFP,parameters.nexusHitPoints());
                         board.playerNexuses.get(PlayerColor.RED).add((Nexus) board.grid[actFP.x][actFP.y]);
-                        board.grid[actSP.x][actSP.y] = new Nexus(PlayerColor.BLUE,actSP,parameters.nexusHitPoints);
+                        board.grid[actSP.x][actSP.y] = new Nexus(PlayerColor.BLUE,actSP,parameters.nexusHitPoints());
                         board.playerNexuses.get(PlayerColor.BLUE).add((Nexus) board.grid[actSP.x][actSP.y]);
                     }else {
-                        board.grid[actFP.x][actFP.y] = new Nexus(PlayerColor.BLUE,actFP,parameters.nexusHitPoints);
+                        board.grid[actFP.x][actFP.y] = new Nexus(PlayerColor.BLUE,actFP,parameters.nexusHitPoints());
                         board.playerNexuses.get(PlayerColor.BLUE).add((Nexus) board.grid[actFP.x][actFP.y]);
-                        board.grid[actSP.x][actSP.y] = new Nexus(PlayerColor.RED,actSP,parameters.nexusHitPoints);
+                        board.grid[actSP.x][actSP.y] = new Nexus(PlayerColor.RED,actSP,parameters.nexusHitPoints());
                         board.playerNexuses.get(PlayerColor.RED).add((Nexus) board.grid[actSP.x][actSP.y]);
                     }
 
                     continue;
                 }
-                if(!(x==1 || x==parameters.baseSize || y==1 || y==parameters.baseSize))
+                if(!(x==1 || x==parameters.baseSize() || y==1 || y==parameters.baseSize()))
                 {
                     board.grid[actFP.x][actFP.y] = new Tunnel();
                     board.grid[actSP.x][actSP.y] = new Tunnel();
